--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>784 Records - Estudio de Grabación</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Font Awesome para los íconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
@@ -18,17 +20,20 @@
         <section class="servicios">
 
             <div class="servicio">
-                <h3><i class="fas fa-music icono-musica"></i> Grabación</h3>
+                <i class="fas fa-microphone icono-musica"></i>
+                <h3>Grabación</h3>
                 <p>Calidad profesional para tus proyectos musicales.</p>
             </div>
 
             <div class="servicio">
-                <h3><i class="fas fa-music icono-musica"></i> Mezcla y Masterización</h3>
+                <i class="fas fa-sliders icono-musica"></i>
+                <h3>Mezcla y Masterización</h3>
                 <p>Sonido pulido y listo para plataformas digitales.</p>
             </div>
 
             <div class="servicio">
-                <h3><i class="fas fa-music icono-musica"></i> Producción Musical</h3>
+                <i class="fas fa-music icono-musica"></i>
+                <h3>Producción Musical</h3>
                 <p>Cursos de nivel inicial en grabación y producción musical.</p>
             </div>
 
@@ -39,8 +44,12 @@
         <h2>Contacto</h2>
         <form action="https://formspree.io/f/mrbqdpwe" method="POST">
             <input type="text" name="name" placeholder="Tu Nombre" required />
-            <input type="email" name="_replyto" placeholder="Tu Email" required />
+            <input type="email" name="email" placeholder="Tu Email" required />
             <textarea name="message" placeholder="Tu Mensaje" required></textarea>
+            
+            <!-- Asunto opcional que podés cambiar -->
+            <input type="hidden" name="_subject" value="Nuevo mensaje desde 784 Records" />
+
             <button type="submit">Enviar</button>
         </form>
     </div>
