--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>784 Records - Estudio de Grabación</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Font Awesome para los íconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
@@ -20,20 +18,17 @@
         <section class="servicios">
 
             <div class="servicio">
-                <i class="fas fa-microphone icono-musica"></i>
-                <h3>Grabación</h3>
+                <h3><i class="fas fa-music icono-musica"></i> Grabación</h3>
                 <p>Calidad profesional para tus proyectos musicales.</p>
             </div>
 
             <div class="servicio">
-                <i class="fas fa-sliders icono-musica"></i>
-                <h3>Mezcla y Masterización</h3>
+                <h3><i class="fas fa-music icono-musica"></i> Mezcla y Masterización</h3>
                 <p>Sonido pulido y listo para plataformas digitales.</p>
             </div>
 
             <div class="servicio">
-                <i class="fas fa-music icono-musica"></i>
-                <h3>Producción Musical</h3>
+                <h3><i class="fas fa-music icono-musica"></i> Producción Musical</h3>
                 <p>Cursos de nivel inicial en grabación y producción musical.</p>
             </div>
 
@@ -44,14 +39,22 @@
         <h2>Contacto</h2>
         <form action="https://formspree.io/f/mrbqdpwe" method="POST">
             <input type="text" name="name" placeholder="Tu Nombre" required />
-            <input type="email" name="email" placeholder="Tu Email" required />
+            <input type="email" name="_replyto" placeholder="Tu Email" required />
             <textarea name="message" placeholder="Tu Mensaje" required></textarea>
-            
-            <!-- Asunto opcional que podés cambiar -->
-            <input type="hidden" name="_subject" value="Nuevo mensaje desde 784 Records" />
-
             <button type="submit">Enviar</button>
         </form>
+
+        <!-- Mapa de ubicación -->
+        <h3>Ubicación del Estudio</h3>
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.307006107555!2d-58.6862238238564!3d-34.69939716256669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc0fb9c2a4b3d%3A0xe849a63e83a094d6!2sMisiones%20784%2C%20B1716JYD%20Libertad%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1716313781361!5m2!1ses-419!2sar" 
+            width="100%" 
+            height="450" 
+            style="border:0; margin-top: 20px;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </div>
     
     <footer>
