--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+    <!-- Barra superior con redes sociales -->
+    <div class="barra-redes">
+      <div class="container-redes">
+        <a href="https://www.instagram.com/784records_/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/120px-Instagram_logo_2016.svg.png" alt="Instagram" />
+        </a>
+        <a href="https://wa.me/5491139076579" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/120px-WhatsApp.svg.png" alt="WhatsApp" />
+        </a>
+      </div>
+    </div>
+
     <header>
         <h1>784 RECORDS</h1>
         <p>ESTUDIO DE GRABACIÓN</p>
@@ -63,4 +75,5 @@
 
 </body>
 </html>
+
 
