--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>784 Records - Estudio de Grabación</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.png" type="favicon.png" /> <!-- Favicon agregado -->
 </head>
 <body>
 
@@ -75,5 +78,3 @@
 
 </body>
 </html>
-
-
