--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>784 Records - Estudio de Grabación</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.png" type="favicon.png" /> <!-- Favicon agregado -->
+    <link rel="icon" href="favicon.png" type="image/png" /> <!-- Corregido el type -->
+    
+    <!-- Font Awesome para iconos -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-pap3Er7x1RYYMTc4LnhzvVd6PwBZqL5uVzNxLR4kMjVkw1rU6G6Fp7Eq6Eo4/ymEfLP1mxXlXHOu4Eu5fSO3kQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 <body>
 
@@ -78,3 +85,4 @@
 
 </body>
 </html>
+
