--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>784 Records - Estudio de Grabación</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.png" type="image/png" /> 
+    <link rel="icon" href="favicon.jpg" type="image/jpg" /> 
     
     <!-- Font Awesome para iconos -->
     <link
